<resources>
    <string name="app_name" translatable="false">HosteleriApp</string>
    <string name="prefs_file" translatable="false">com.example.hosteleriapp.PREFERENCE_FILE_KEY</string>
    <string name="request_id_token" translatable="false">301907262057-vgi0usem2k659u2fpojogqa36155armv.apps.googleusercontent.com</string>
    <string name="correo_electronico">E-Mail</string>
    <string name="pwd">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="nombre">Name</string>
    <string name="apellidos">Surnames</string>
    <string name="huella_no_reconocida">Biometrics not recognized</string>
    <string name="biometria_disponible">Biometrics available</string>
    <string name="autenticacion_correcta">Correct authentication</string>
    <string name="autenticacion">Authentication</string>
    <string name="introduce_credenciales">Enter your credentials</string>
    <string name="introduce_huella">Enter your fingerprint</string>
    <string name="cancelar">Cancel</string>
    <string name="biometria_no_disponible">Biometrics not available</string>
    <string name="login_google">Google Login</string>
    <string name="eliminar">delete</string>
    <string name="aBar">Convert to Bar</string>
    <string name="aUsuario">Convert to User</string>
    <string name="editar_localizacion">Edit Location</string>
    <string name="gestionar_carta">Manage menu</string>
    <string name="ver_comandas">See orders</string>
    <string name="title_activity_establecimiento">EstablecimientoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="product_description">Product Description</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="product_prize">Product Prize</string>
    <string name="producto_added">Producto added correctly</string>
    <string name="borrar_producto">Do you want to delete this product?</string>
    <string name="yes">yes</string>
    <string name="editar_producto">Edit product</string>
    <string name="delete_product">Delete product</string>
    <string name="manage_products">Manage Product</string>
    <string name="producto_deleted">Product deleted correctly</string>
    <string name="producto_edited">Product edited correctly</string>
    <string name="product_failed">All the camps have to be completed</string>
    <string name="sat_lite">Satelite</string>
    <string name="normal">Normal</string>
    <string name="Hibrid">Hibrid</string>
    <string name="terreno">Terrain</string>
    <string name="editar_usuario">Edit User</string>
    <string name="usuario_editado">User edited Correctly</string>
    <string name="edit_user">Edit user</string>
    <string name="realizar_pedido">Make an order</string>
    <string name="numero_mesa">table number</string>
    <string name="completar_pedido">Complete order</string>
    <string name="marcar_no_complete">mark not completed</string>
    <string name="visualizar_comanda">Visualize Order</string>
    <string name="guardar_ubicacion">You want save this ubication?</string>
    <string name="no">no</string>
    <string name="product_name_order">Product Name</string>
    <string name="cuantity">cuantity</string>
    <string name="opciones_comanda">Orders options</string>
    <string name="delete_order">delete order</string>
    <string name="opciones_usuario">User options</string>
    <string name="seleccionar_imagen">Select image</string>
    <string name="metodo_utilizar">What method want to use?</string>
    <string name="camara">Camera</string>
    <string name="galeria">Gallery</string>
    <string name="selecciona_imagen">Select a image</string>
    <string name="download_failed">Something failed in the download</string>
    <string name="permisos_localizacion">To activate the location go to settings and accept the permissions</string>
    <string name="precio">Prize</string>
    <string name="ajustes_permisos">Go to settings and accept the permissions</string>
    <string name="comprobar_datos">Check the data and enter it correctly</string>
    <string name="error">Error</string>
    <string name="error_autenticacion">An error occurred authenticating the user</string>
    <string name="usuario_registrado">Successfully registered user</string>
    <string name="imagen_editada">Image edited successfully</string>
</resources>